--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,8 +20,21 @@
         android:src="@drawable/userphoto"
         app:layout_constraintBottom_toTopOf="@+id/regName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.566" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/regUserPhoto"
+        app:layout_constraintEnd_toEndOf="@+id/regUserPhoto"
+        app:layout_constraintStart_toStartOf="@+id/regUserPhoto"
+        app:layout_constraintTop_toTopOf="@+id/regUserPhoto"
+        app:layout_constraintVertical_bias="0.383"
+        app:srcCompat="@drawable/fondo_android" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
