--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,9 +9,11 @@
     android:orientation="vertical"
     android:background="#fff">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/comun_RV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/comunicado_item" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:hint="Esta es la pantalla de los comunicados, si aun no ha cargado ninguno, es probable que aun  esten cargando" />
+
 </LinearLayout>
