--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,13 +24,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="88dp"
-        android:layout_height="90dp"
-        android:src="@drawable/photo_style"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/prof_UserPhoto"
         app:layout_constraintEnd_toEndOf="@+id/prof_UserPhoto"
         app:layout_constraintStart_toStartOf="@+id/prof_UserPhoto"
-        app:layout_constraintTop_toTopOf="@+id/prof_UserPhoto" />
+        app:layout_constraintTop_toTopOf="@+id/prof_UserPhoto"
+        app:srcCompat="@drawable/fondo_android"
+        tools:srcCompat="@drawable/fondo_android" />
 
     <android.support.constraint.Guideline
         android:id="@+id/prof_Guide"
